added snappish for home page animation frames

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "pb-scaffold",
   "private": true,
-  "dependencies": {
-    "jquery": "~1.11.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "bootstrap-sass-official": "~3.2.0+1"
+    "jquery-snappish": "~0.2.0"
   }
 }
