--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compass": "^0.9.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "~0.5.0",
